--- a/telegram/build.gradle
+++ b/telegram/build.gradle
@@ -16,7 +16,7 @@ plugins {
 apply plugin: 'kotlin'
 
 group 'com.github.kotlintelegrambot'
-version '6.0.7'
+version '6.0.7-custom.2'
 
 repositories {
     mavenCentral()
